2008-01-11  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules: move gnome-keyring-manager
	definition here.
	* modulesets/gnome-suites-2.22.modules: removed definition from
	here and removed g-k-m from meta-gnome-desktop-suite.

	Its features are now provided by seahorse. Again, see [1].

2008-01-11  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules: removed gnome-settings-daemon.
	* modulesets/gnome-suites-2.22.modules: added gnome-settings-daemon
	module definition, plus include gnome-settings-daemon and
	totem-pl-parser to meta-gnome-desktop-suite. Also make gdm depends
	on gnome-settings-daemon (gnome-control-center will come).
	This change is listed in previous [1] too.

2008-01-11  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules:

	Moved chesse, gvfs, vinagre, and anjuta module definitions
	from here...
	
	* modulesets/gnome-suites-2.22.modules:

	...to here. Those modules are now officially[1] part of GNOME
	Desktop and are developed on svn.gnome.org.

	External deps are not updated (for example vinagre still use
	gtk-vnc from mercurial repository, not from released package)

	[1] http://mail.gnome.org/archives/devel-announce-list/2008-January/msg00001.html

2008-01-11  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: hint evolution-data-server to
	be built after gnome-keyring; hint file-roller to be built after
	libsexy.

2008-01-10  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-suites-2.22.modules: Make file-roller depend
	on libsexy.

2008-01-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/rdepends.py: added a rdepends command, to show
	reverse dependency information for a module; it has two possible
	options: --dependencies to display dependency path next to modules,
	and --direct to limit display to modules directly depending on the
	given module.  (closes: #508289)

2008-01-10  Wouter Bolsterlee  <wbolster@svn.gnome.org>
