@@ -38,7 +38,7 @@ _known_keys = [ 'moduleset', 'modules', 'skip', 'prefix',
                 'tarballdir', 'pretty_print', 'svn_program', 'makedist',
                 'makedistcheck', 'nonotify', 'cvs_program',
                 'checkout_mode', 'copy_dir', 'module_checkout_mode',
-                'build_policy', 'trycheckout', 'nopoison', 'quiet_mode',
+                'build_policy', 'force_policy', 'trycheckout', 'nopoison', 'quiet_mode',
                 'progress_bar']
 
 env_prepends = {}
