@@ -54,6 +54,7 @@ makedist      = False  # run make dist after building
 makedistcheck = False  # run make distcheck after building
 trycheckout   = False  # try to force checkout and autogen on failure
 nopoison      = False  # don't poison modules on failure
+force_policy  = False  # Whether to override specified build policy
 
 interact      = True   # whether to interact with the user.
 quiet_mode    = False  # whether to display running commands output
