@@ -1,3 +1,12 @@
+2008-01-11  Colin Walters  <walters@redhat.com>
+
+        http://bugzilla.gnome.org/show_bug.cgi?id=507930
+
+        * jhbuild/commands/base.py: Add --force option to build and buildone.
+        * jhbuild/modtypes/__init__.py: Allow for overriding policy.
+        * jhbuild/config.py: Add variable force_policy to config.
+        * jhbuild/defaults.jhbuildrc: Default force_policy to off.
+
 2008-01-11  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-2.22.modules: move gnome-keyring-manager
